PAL-1086 fixed test issues